@@ -192,7 +192,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.5</version>
                     <configuration>
-                      <argLine>-Duser.timezone=UTC</argLine>
+                      <argLine>-Duser.timezone=UTC -XX:MaxPermSize=1024m -Xmx1024m</argLine>
                         <skipTests>false</skipTests>
  					<testFailureIgnore>true</testFailureIgnore>
                         <forkMode>once</forkMode>
